# cs-update_loc_jp

./: .gitignore  Makefile  README.md  pyproject.toml
src/: format_json.py  normalize_cs_json.py  normalize_json.py  serapeum_catalogue_number.txt  synopsis.json
