[tool.poetry]
name = "cs-update-loc-jp"
version = "0.1.0"
description = "Cultist Simulatorの日本語ロケールを更新します"
authors = [ "Hiroshi Miura <hirmiura@gmail.com>" ]
license = "MIT"
readme = "README.md"
packages = [ { include = "src" } ]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]


[tool.poetry.dependencies]
python    = "^3.11"
jsonpatch = "^1.32"
json5     = "^0.9.14"


[tool.poetry.group.dev.dependencies]
flake8           = "^6.0.0"
mypy             = "^1.3.0"
black            = "^23.3.0"
isort            = "^5.12.0"
pytest           = "^7.3.1"
flake8-pyproject = "^1.2.3"


[build-system]
requires      = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"


[tool.mypy]
ignore_missing_imports = true
no_implicit_optional   = true
warn_redundant_casts   = true
warn_unused_ignores    = false


[tool.black]
line-length = 100
target-version = [ 'py311' ]
include = '\.pyi?$'
exclude = '''
(
    \.git
    | \.mypy_cache
    | \.pytest_cache
    | \.venv
    | \.vscode
)
'''


[tool.flake8]
exclude         = [ ".git", ".mypy_cache", ".pytest_cache", ".venv", "__pycache__", "tests/*" ]
ignore          = "E203,W503"
max-complexity  = 10
max-line-length = 100


[tool.isort]
include_trailing_comma = true
line_length            = 100
multi_line_output      = 3
profile                = "black"
